# gatebleed

./: .gitignore  README.md  experiment_runner.py  requirements.txt
01_performance_stages/: .gitignore  2025030323:15:09_minpow_nowarmup_rdtsc.csv  2025042409:17:06_minpow_nowarmup_rdtsc.csv  Makefile  README  README.md  busyloop.c  data_rdtsc.csv  get_rdtscp_data.py  original.csv  plot.py  run.bash
02_performance_stages_in_sgx/: 20250320_23:49.csv  Makefile  README.md  data.csv  enclave.c  enclave.config.xml  enclave.edl  enclave.token  enclave_t.c  enclave_t.h  enclave_u.c  enclave_u.h  main.c  plot.py  private-key.pem  sweep_waits.bash
03_remote_gatebleed_covert_channel/: Makefile  README.md  busyloop  client  client.c  experiment.py  localhost.csv  network_config.h  plot.py  server  server.c
04_remote_gatebleed_spectre/: .gitignore  I_byte_1hop.csv  Makefile  README.md  busyloop.c  client.c  leak_byte.bash  plot_byte.py  server.c
05_gatebleed_transformer_model/: README
05_gatebleed_transformer_model/src/: main.cpp  utils.cpp
06_gatebleed_ee_transformer_mia/: README  README.md  makefile  notes.txt
06_gatebleed_ee_transformer_mia/amx_runner/: Makefile  experiment.bash  launch_trial.bash  main.c  plot.py  roc.py  stats.py
06_gatebleed_moe_transformer_mia/: plot.py
07_gatebleed_cnn_model/: README.md  test_non-member.txt  train_member.txt
07_gatebleed_cnn_model_mia/: CMakeLists.txt  README.md  network.txt  python_run_and_plot_graph.py
07_gatebleed_cnn_model_mia/data/: test-class-labels.idx1-ubyte
07_gatebleed_cnn_model_mia/src/: MNISTDataLoader.cpp
(+22 files in other folders)
